--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.11.0"
   },
